--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.1",
     "lucide-react": "^0.475.0",
     "mongodb": "^6.16.0",
     "next": "^15.2.0",
